--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
     "requests": "^0.3.0",
+    "root": "tanstack/react-query",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
