--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-table": "^8.11.6",
     "@types/lodash": "^4.14.202",
     "@types/node": "20.11.5",
@@ -34,9 +35,11 @@
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.312.0",
-    "next": "14.0.4",
+    "next": "^15.1.6",
+    "nuqs": "^2.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.10.0",
     "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.1",
