--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "next": "^15.1.6",
     "nuqs": "^2.3.2",
     "react": "18.2.0",
+    "react-day-picker": "^9.5.1",
     "react-dom": "18.2.0",
     "react-select": "^5.10.0",
     "sharp": "^0.33.2",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
