--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.312.0",
     "next": "^15.1.6",
+    "next-usequerystate": "^1.20.0",
     "nuqs": "^2.3.2",
     "react": "18.2.0",
     "react-day-picker": "^9.5.1",
