--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -31,6 +32,7 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "ai": "^4.1.26",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -41,6 +43,8 @@
     "next": "^15.1.6",
     "next-usequerystate": "^1.20.0",
     "nuqs": "^2.3.2",
+    "openai": "^4.83.0",
+    "perplexity": "^1.0.1",
     "react": "18.2.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "18.2.0",
@@ -56,6 +60,7 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "shadcn-ui": "^0.9.4",
+    "tailwind-scrollbar": "^4.0.0",
     "tsx": "^4.19.2"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
