--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "18.2.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^5.0.0",
     "react-select": "^5.10.0",
     "sharp": "^0.33.2",
     "sonner": "^1.7.4",
