--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.4.2",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.312.0",
@@ -55,7 +56,8 @@
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "zustand": "4.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
