--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tailwindcss/postcss": "^4.0.6",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-table": "^8.11.6",
     "@types/lodash": "^4.14.202",
@@ -54,16 +55,16 @@
     "sharp": "^0.33.2",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3",
     "zustand": "4.5.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.2",
     "shadcn-ui": "^0.9.4",
     "tailwind-scrollbar": "^4.0.0",
+    "tailwindcss": "3.4.1",
     "tsx": "^4.19.2"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
