--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.312.0",
     "next": "^15.1.6",
+    "next-themes": "^0.4.4",
     "next-usequerystate": "^1.20.0",
     "nuqs": "^2.3.2",
     "openai": "^4.83.0",
