--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tailwindcss/postcss": "^4.0.6",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-table": "^8.11.6",
+    "@types/classnames": "^2.3.4",
     "@types/lodash": "^4.14.202",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
@@ -36,6 +37,7 @@
     "ai": "^4.1.26",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.0.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.2",
