--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.2",
+    "postcss-import": "^16.1.0",
+    "postcss-nesting": "^13.0.1",
     "shadcn-ui": "^0.9.4",
     "tailwind-scrollbar": "^4.0.0",
     "tailwindcss": "3.4.1",
